# multimodal-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/frontend/: index.html  script.js  style.css
app/models/: request_models.py
app/services/: llm.py  pdf_parser.py  vector_store.py
