[project]
name = "multimodal-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "python-dotenv",
    "groq",
    "unstructured[pdf]",
    "langchain-chroma",
    "langchain-groq",
    "langchain-huggingface",
    "sentence-transformers",
]
